--- a/myDailyAccountEntry/account_entry/templates/home.html
+++ b/myDailyAccountEntry/account_entry/templates/home.html
@@ -22,6 +22,10 @@
 <tr>
 <td><a href="/category_view" target="_blank">Category view</a></td>
 </tr>
+<tr>
+<td><a href="/sample" target="_blank">Testing page</a></td>
+</tr>
+
 </table>
 
 </body>
