--- a/myDailyAccountEntry/account_entry/templates/cash_balance_check.html
+++ b/myDailyAccountEntry/account_entry/templates/cash_balance_check.html
@@ -6,7 +6,26 @@
 </head>
 <body>
 <h1>Cash balance check entry</h1>
-
-
+<form action="balance_checkEntry/" method="post">
+{% csrf_token %}
+<p>Date: <br/><input type="text" name="date" value="{{ date }}" readonly autofocus></p> 
+<p>Amount: <br/><input type="text" name="amount" value="{{ bal }}" readonly></p> 
+<p>Rs 500: <br/><input type="number" name="rs500" value=0 placeholder="500"></p> 
+<p>Rs 200: <br/><input type="number" name="rs200" value=0 placeholder="200"></p>
+<p>Rs 100: <br/><input type="number" name="rs100" value=0 placeholder="100"></p>  
+<p>Rs 50: <br/><input type="number" name="rs50" value=0 placeholder="50"></p> 
+<p>Rs 20: <br/><input type="number" name="rs20" value=0 placeholder="20"></p> 
+<p>Rs 10: <br/><input type="number" name="rs10" value=0 placeholder="10"></p> 
+<p>Rs 5: <br/><input type="number" name="rs5" value=0 placeholder="5"></p> 
+<p>Rs 2: <br/><input type="number" name="rs2" value=0 placeholder="2"></p> 
+<p>Rs 1: <br/><input type="number" name="rs1" value=0 placeholder="1"></p> 
+<p>Total amount: <br/><input type="text" name="total_amount" value=0 placeholder="Total amount:" readonly></p> 
+<p>Difference amount: <br/><input type="text" name="balance_amount" value=0 placeholder="Difference amount:" readonly></p> 
+<p>Status: <br/><select name="status">
+<option value="Proper">Proper</option>
+<option value="Approximate">Approximate</option>
+</select></p>
+<p>Submit:<br/><input type="submit" value="Submit"></p>
+</form>
 </body>
 </html>
