--- a/myDailyAccountEntry/account_entry/templates/category_view.html
+++ b/myDailyAccountEntry/account_entry/templates/category_view.html
@@ -27,5 +27,11 @@
 </table>
 <hr />
 <a href="/home">Click here to go to home page</a>
+<hr/>
+<form action="cash_check/" method="post">
+<p>Enter the date to cash check: <input type="date" name="filter_date" value="{% now "Y-m-d" %}" placeholder="Select the date here:"></p>
+<p><input type="submit" value="Submit"></p>
+</form>
+
 </body>
 </html>
