--- a/myDailyAccountEntry/account_entry/templates/home.html
+++ b/myDailyAccountEntry/account_entry/templates/home.html
@@ -23,6 +23,9 @@
 <td><a href="/category_view" target="_blank">Category view</a></td>
 </tr>
 <tr>
+<td><a href="/balance_view/" target="_blank">Cash balance view</a></td>
+</tr>
+<tr>
 <td><a href="/sample" target="_blank">Testing page</a></td>
 </tr>
 
