created html page for daily account report

--- a/myDailyAccountEntry/account_entry/templates/sample2.html
+++ b/myDailyAccountEntry/account_entry/templates/sample2.html
@@ -2,19 +2,55 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>My favorite web page</title>
+<title>My daily account entry report page</title>
 </head>
 <body>
-<h1>welcome</h1>
-<h2>list</h2>
-<p>The total balance amount in cash account: {{ account1 }}.</p>
-<p>The total balance amount in cash account: {{ account2 }}.</p>
-<p>The total balance amount in cash account: {{ account3 }}.</p>
-<p>The total balance amount in cash account: {{ account4 }}.</p>
-<p>The total balance amount in cash account: {{ account5 }}.</p>
-<p>The total balance amount in cash account: {{ account6 }}.</p>
-<p>The total balance amount in cash account: {{ account7 }}.</p>
-<p>The total balance amount in cash account: {{ account8 }}.</p>
-<p>The total balance amount in cash account: {{ account9 }}.</p>
+<h1>Account entry report</h1>
+<table border="2pt">
+<tr>
+<th>Account</th>
+<th>Balance amount</th>
+</tr>
+<tr>
+<td>Cash</td>
+<td>{{ account1 }}</td>
+</tr>
+<tr>
+<td>EPay On</td>
+<td>{{ account2 }}</td>
+</tr>
+<tr>
+<td>IOB Mohan</td>
+<td>{{ account3 }}</td>
+</tr>
+<tr>
+<td>Indian bank Gayathri</td>
+<td>{{ account4 }}</td>
+</tr>
+<tr>
+<td>Indian bank Mohan</td>
+<td>{{ account5 }}</td>
+</tr>
+<tr>
+<td>Jio Pos Lite</td>
+<td>{{ account6 }}</td>
+</tr>
+<tr>
+<td>Mohan Canara Bank</td>
+<td>{{ account7 }}</td>
+</tr>
+<tr>
+<td>Pay Near by</td>
+<td>{{ account8 }}</td>
+</tr>
+<tr>
+<td>SBI Mohan</td>
+<td>{{ account9 }}</td>
+</tr>
+<tr>
+<td>Total amount:</td>
+<td>total amount</td>
+</tr>
+</table>
 </body>
 </html>
