changes link in html and tested for balance check update

--- a/myDailyAccountEntry/account_entry/templates/cash_balance_view.html
+++ b/myDailyAccountEntry/account_entry/templates/cash_balance_view.html
@@ -40,7 +40,7 @@
 <td> {{ x.rs2 }}</td>
 <td> {{ x.rs1 }}</td>
 <td> {{ x.status }}</td>
-<td><a href="/update_balance/{{ x.id }}/{{ x.date }}">Update</a></td>
+<td><a href="/test/{{ x.id }}/{{ x.date }}">Update</a></td>
 </tr>
 {% endfor %}
 </table>
