--- a/myDailyAccountEntry/account_entry/templates/home.html
+++ b/myDailyAccountEntry/account_entry/templates/home.html
@@ -26,7 +26,10 @@
 <td><a href="/balance_view/" target="_blank">Cash balance view</a></td>
 </tr>
 <tr>
-<td><a href="/sample" target="_blank">Testing page</a></td>
+<td><a href="/sample" target="_blank">Account entry list  page</a></td>
+</tr>
+<tr>
+<td><a href="/daily_account_report" target="_blank">Daily account total report</a></td>
 </tr>
 
 </table>
