--- a/myDailyAccountEntry/account_entry/templates/credit_list.html
+++ b/myDailyAccountEntry/account_entry/templates/credit_list.html
@@ -6,8 +6,13 @@
 </head>
 <body>
 <h1>welcome</h1>
-{% for x, y in list.items %}
-<p>{{ x }}  and {{ y }} </p>
+<table border = "2px">
+{% for x, y in balance_list.items %}
+<tr>
+<td>{{ x }}</td>
+<td>{{ y }}</td>
+</tr>
 {% endfor %}
+</table>
 </body>
 </html>
