started to develop update balance sheet

--- a/myDailyAccountEntry/account_entry/templates/cash_balance_view.html
+++ b/myDailyAccountEntry/account_entry/templates/cash_balance_view.html
@@ -40,11 +40,12 @@
 <td> {{ x.rs2 }}</td>
 <td> {{ x.rs1 }}</td>
 <td> {{ x.status }}</td>
-<td><a href="/test/{{ x.id }}/{{ x.date }}">Update</a></td>
+<td><a href="/balanceUpdate/{{ x.id }}/{{ x.date }}">Update</a></td>
 </tr>
 {% endfor %}
 </table>
 <hr/>
+<h2>Select the date and submit to check the cash balance</h2>
 <form action="cash_check/" method="post">
 {% csrf_token %}
 <p>Enter the date to cash check: <input type="date" name="filter_date" value="{% now "Y-m-d" %}" placeholder="Select the date here:"></p>
