--- a/myDailyAccountEntry/account_entry/templates/home.html
+++ b/myDailyAccountEntry/account_entry/templates/home.html
@@ -26,7 +26,7 @@
 <td><a href="/balance_view/" target="_blank">Cash balance view</a></td>
 </tr>
 <tr>
-<td><a href="/sample" target="_blank">Account entry list  page</a></td>
+<td><a href="/account_entry_report" target="_blank">Account entry report</a></td>
 </tr>
 <tr>
 <td><a href="/daily_account_report" target="_blank">Daily account total report</a></td>
