--- a/myDailyAccountEntry/account_entry/templates/cash_balance_check_update.html
+++ b/myDailyAccountEntry/account_entry/templates/cash_balance_check_update.html
@@ -10,15 +10,15 @@
 {% csrf_token %}
 <p>Date: <br/><input type="text" name="date" value="{{ bal_date }}" readonly autofocus></p> 
 <p>Amount: <br/><input type="text" name="amount" value="{{ amount }}" readonly></p> 
-<p>Rs 500: <br/><input id='rs500' type="number" name="rs500" value=0 placeholder="500"></p> 
-<p>Rs 200: <br/><input id='rs200' type="number" name="rs200" value=0 placeholder="200"></p>
-<p>Rs 100: <br/><input id='rs100' type="number" name="rs100" value=0 placeholder="100"></p>  
-<p>Rs 50: <br/><input id='rs50' type="number" name="rs50" value=0 placeholder="50"></p> 
-<p>Rs 20: <br/><input id='rs20' type="number" name="rs20" value=0 placeholder="20"></p> 
-<p>Rs 10: <br/><input id='rs10' type="number" name="rs10" value=0 placeholder="10"></p> 
-<p>Rs 5: <br/><input id='rs5' type="number" name="rs5" value=0 placeholder="5"></p> 
-<p>Rs 2: <br/><input id='rs2' type="number" name="rs2" value=0 placeholder="2"></p> 
-<p>Rs 1: <br/><input id='rs1' type="number" name="rs1" value=0 placeholder="1"></p> 
+<p>Rs 500: <br/><input id='rs500' type="number" name="rs500" value="{{ bal_update.rs500 }}" placeholder="500"></p> 
+<p>Rs 200: <br/><input id='rs200' type="number" name="rs200" value="{{ bal_update.rs200 }}" placeholder="200"></p>
+<p>Rs 100: <br/><input id='rs100' type="number" name="rs100" value="{{ bal_update.rs100 }}" placeholder="100"></p>  
+<p>Rs 50: <br/><input id='rs50' type="number" name="rs50" value="{{ bal_update.rs50 }}" placeholder="50"></p> 
+<p>Rs 20: <br/><input id='rs20' type="number" name="rs20" value="{{ bal_update.rs20 }}" placeholder="20"></p> 
+<p>Rs 10: <br/><input id='rs10' type="number" name="rs10" value="{{ bal_update.rs10 }}" placeholder="10"></p> 
+<p>Rs 5: <br/><input id='rs5' type="number" name="rs5" value="{{ bal_update.rs5 }}" placeholder="5"></p> 
+<p>Rs 2: <br/><input id='rs2' type="number" name="rs2" value="{{ bal_update.rs2 }}" placeholder="2"></p> 
+<p>Rs 1: <br/><input id='rs1' type="number" name="rs1" value="{{ bal_update.rs1 }}" placeholder="1"></p> 
 <p>Total amount: <br/><input id='total_amount' type="text" name="total_amount" value=0 placeholder="Total amount:" readonly></p> 
 <p>Difference amount: <br/><input id='difference_amount' type="text" name="balance_amount" value=0 placeholder="Difference amount:" readonly></p> 
 <p>Status: <br/><select name="status">
@@ -93,7 +93,7 @@
     // Update the value of net based on what the user inputs in in amount fields
     function updateNet(e) {
         net = parseInt(r500*500) + parseInt(r200*200) + parseInt(r100*100) + parseInt(r50*50) + parseInt(r20*20) + parseInt(r10*10) + parseInt(r5*5) + parseInt(r2*2) + parseInt(r1*1);
-        difamount = {{ bal }} - net;
+        difamount = {{ amount }} - net;
         net_input.value = net;
         difamount_input.value = difamount;
     }
