--- a/myDailyAccountEntry/account_entry/templates/home.html
+++ b/myDailyAccountEntry/account_entry/templates/home.html
@@ -32,6 +32,9 @@
 <td><a href="/daily_account_report" target="_blank">Daily account total report</a></td>
 </tr>
 
+<tr>
+<td><a href="/credit" target="_blank">Credit balance report</a></td>
+</tr>
 </table>
 
 </body>
