created html page for advance filter

--- a/myDailyAccountEntry/account_entry/templates/home.html
+++ b/myDailyAccountEntry/account_entry/templates/home.html
@@ -29,6 +29,10 @@
 <td><a href="/account_entry_report" target="_blank">Account entry report</a></td>
 </tr>
 <tr>
+<td><a href="/filter" target="_blank">Account entry advance filter report</a></td>
+</tr>
+
+<tr>
 <td><a href="/daily_account_report" target="_blank">Daily account total report</a></td>
 </tr>
 
