--- a/myDailyAccountEntry/account_entry/templates/add_category.html
+++ b/myDailyAccountEntry/account_entry/templates/add_category.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Add category</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mystyle.css' %}">
+
 </head>
 <body>
 <h1>Add category</h1>
@@ -32,7 +35,7 @@
 </form>
 </div>
 <hr />
-<a href="/home">Click here to go to home page</a>
+
 
 </body>
 </html>
