--- a/myDailyAccountEntry/account_entry/templates/cash_balance_check_update.html
+++ b/myDailyAccountEntry/account_entry/templates/cash_balance_check_update.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Cash balance update</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mystyle.css' %}">
+
 </head>
 <body>
 <h1>Cash balance update</h1>
