--- a/myDailyAccountEntry/account_entry/templates/cash_balance_view.html
+++ b/myDailyAccountEntry/account_entry/templates/cash_balance_view.html
@@ -3,10 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Cash balance check sheet</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mystyle.css' %}">
+
 </head>
 <body>
 <h1>Balance check list view</h1>
-<table border= "1pt">
+<table>
 <tr>
 <th>Date</th>
 <th>Amount</th>
