--- a/myDailyAccountEntry/account_entry/templates/deleteCategory.html
+++ b/myDailyAccountEntry/account_entry/templates/deleteCategory.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Delete category</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mystyle.css' %}">
+
 </head>
 <body>
 <h1>Delete category</h1>
