--- a/myDailyAccountEntry/account_entry/templates/home.html
+++ b/myDailyAccountEntry/account_entry/templates/home.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>My daily account entry</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mystyle.css' %}">
+
 </head>
 <body>
-<h1><marquee>Daily account entry</marquee></h1>
+<h1>Daily account entry</h1>
 <hr />
 
 <h2>Account entry</h2>
