--- a/myDailyAccountEntry/account_entry/templates/addAccountEntry.html
+++ b/myDailyAccountEntry/account_entry/templates/addAccountEntry.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Add daily account entry</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mystyle.css' %}">
+
 </head>
 <body>
 <h1>Daily account entry</h1>
