--- a/myDailyAccountEntry/account_entry/templates/updateAccountEntry.html
+++ b/myDailyAccountEntry/account_entry/templates/updateAccountEntry.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Update daily account entry</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mystyle.css' %}">
+
 </head>
 <body>
 <h1>Update daily account entry</h1>
