--- a/myDailyAccountEntry/account_entry/templates/update_cash_balance.html
+++ b/myDailyAccountEntry/account_entry/templates/update_cash_balance.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Cash balance check</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mystyle.css' %}">
+
 </head>
 <body>
 <h1>Cash balance check entry</h1>
