--- a/myDailyAccountEntry/account_entry/templates/update_category.html
+++ b/myDailyAccountEntry/account_entry/templates/update_category.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Update category</title>
+{% load static %}
+<link rel="stylesheet" href="{% static 'mystyle.css' %}">
+
 </head>
 <body>
 <h1>Update category</h1>
