errors corrected in update page, need to correct in balance check update

--- a/myDailyAccountEntry/account_entry/templates/Advance_filter_report.html
+++ b/myDailyAccountEntry/account_entry/templates/Advance_filter_report.html
@@ -33,7 +33,7 @@
 <td>{{ x.amount }}</td>
 <td>{{ x.name}}</td>
 <td>{{ x.notes }}</td>
-<td><a href="/account_entry_report/update_account_entry/{{ x.id }}">Update</a></td>
+<td><a href="/update_account_entry/{{ x.id }}">Update</a></td>
 </tr>
 {% endfor %}
 </table>
