--- a/myDailyAccountEntry/account_entry/templates/update_cash_balance.html
+++ b/myDailyAccountEntry/account_entry/templates/update_cash_balance.html
@@ -2,26 +2,26 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Cash balance check</title>
+<title>Cash balance update</title>
 {% load static %}
 <link rel="stylesheet" href="{% static 'mystyle.css' %}">
 
 </head>
 <body>
 <h1>Cash balance check entry</h1>
-<form action="/balance_view/cash_check/balance_checkEntry/" method="post">
+<form action="/update_balance_entry/{{ bal_update.id }}" method="post">
 {% csrf_token %}
-<p>Date: <br/><input type="text" name="date" value="{{ date }}" readonly autofocus></p> 
-<p>Amount: <br/><input type="text" name="amount" value="{{ bal }}" readonly></p> 
-<p>Rs 500: <br/><input id='rs500' type="number" name="rs500" value=0 placeholder="500"></p> 
-<p>Rs 200: <br/><input id='rs200' type="number" name="rs200" value=0 placeholder="200"></p>
-<p>Rs 100: <br/><input id='rs100' type="number" name="rs100" value=0 placeholder="100"></p>  
-<p>Rs 50: <br/><input id='rs50' type="number" name="rs50" value=0 placeholder="50"></p> 
-<p>Rs 20: <br/><input id='rs20' type="number" name="rs20" value=0 placeholder="20"></p> 
-<p>Rs 10: <br/><input id='rs10' type="number" name="rs10" value=0 placeholder="10"></p> 
-<p>Rs 5: <br/><input id='rs5' type="number" name="rs5" value=0 placeholder="5"></p> 
-<p>Rs 2: <br/><input id='rs2' type="number" name="rs2" value=0 placeholder="2"></p> 
-<p>Rs 1: <br/><input id='rs1' type="number" name="rs1" value=0 placeholder="1"></p> 
+<p>Date: <br/><input type="text" name="date" value="{{ bal_date }}" readonly autofocus></p> 
+<p>Amount: <br/><input type="text" name="amount" value="{{ amount }}" readonly></p> 
+<p>Rs 500: <br/><input id='rs500' type="number" name="rs500" value="{{ bal_update.rs500 }}" placeholder="500"></p> 
+<p>Rs 200: <br/><input id='rs200' type="number" name="rs200" value="{{ bal_update.rs200 }}" placeholder="200"></p>
+<p>Rs 100: <br/><input id='rs100' type="number" name="rs100" value="{{ bal_update.rs100 }}" placeholder="100"></p>  
+<p>Rs 50: <br/><input id='rs50' type="number" name="rs50" value="{{ bal_update.rs50 }}" placeholder="50"></p> 
+<p>Rs 20: <br/><input id='rs20' type="number" name="rs20" value="{{ bal_update.rs20 }}" placeholder="20"></p> 
+<p>Rs 10: <br/><input id='rs10' type="number" name="rs10" value="{{ bal_update.rs10 }}" placeholder="10"></p> 
+<p>Rs 5: <br/><input id='rs5' type="number" name="rs5" value="{{ bal_update.rs5 }}" placeholder="5"></p> 
+<p>Rs 2: <br/><input id='rs2' type="number" name="rs2" value="{{ bal_update.rs2 }}" placeholder="2"></p> 
+<p>Rs 1: <br/><input id='rs1' type="number" name="rs1" value="{{ bal_update.rs1 }}" placeholder="1"></p> 
 <p>Total amount: <br/><input id='total_amount' type="text" name="total_amount" value=0 placeholder="Total amount:" readonly></p> 
 <p>Difference amount: <br/><input id='difference_amount' type="text" name="balance_amount" value=0 placeholder="Difference amount:" readonly></p> 
 <p>Status: <br/><select name="status">
