--- a/myDailyAccountEntry/account_entry/templates/accountEntryDatabase.html
+++ b/myDailyAccountEntry/account_entry/templates/accountEntryDatabase.html
@@ -33,7 +33,7 @@
 <td>{{ x.amount }}</td>
 <td>{{ x.name}}</td>
 <td>{{ x.notes }}</td>
-<td><a href="/update_account_entry/{{ x.id }}">Update</a></td>
+<td><a href="update_account_entry/{{ x.id }}">Update</a></td>
 </tr>
 {% endfor %}
 </table>
