changes in difference list files

--- a/myDailyAccountEntry/account_entry/templates/home.html
+++ b/myDailyAccountEntry/account_entry/templates/home.html
@@ -26,7 +26,7 @@
 <td><a href="/category_view" target="_blank">Category view</a></td>
 </tr>
 <tr>
-<td><a href="/balance_view/" target="_blank">Cash balance view</a></td>
+<td><a href="/balance_view" target="_blank">Cash balance view</a></td>
 </tr>
 <tr>
 <td><a href="/account_entry_report" target="_blank">Account entry report</a></td>
@@ -43,6 +43,14 @@
 <td><a href="/credit" target="_blank">Credit balance report</a></td>
 </tr>
 </table>
+<h2>Difference check</h2>
+<p><a href="difference_check/Aadhaar ATM transaction in/Aadhaar ATM money out">Aadhaar ATM transaction in   Aadhaar ATM money out</a></p>
+<p><a href="difference_check/By mobile recharge/Mobile recharge">By mobile recharge   Mobile recharge</a></p>
+<p><a href="difference_check/Money in for transaction out/Transaction out by money in">Money in for transaction out   Transaction out by money in</a></p>
+<p><a href="difference_check/Transaction in for money out/Money out by transaction in">Transaction in for money out   Money out by transaction in</a></p>
+<p><a href="difference_check/Transaction in for transaction out/Transaction out by transaction in">Transaction in for transaction out   Transaction out by transaction in</a></p>
+<p><a href="difference_check/Transaction out for transaction in/Transaction in by transaction out">Transaction out for transaction in   Transaction in by transaction out</a></p>
+<p><a href="difference_check/Wallet Deposit for recharge/Wallet money added">Wallet Deposit for recharge   Wallet money added</a></p>
 
 </body>
 </html>
