changes in difference report html file

--- a/myDailyAccountEntry/account_entry/templates/difference_list.html
+++ b/myDailyAccountEntry/account_entry/templates/difference_list.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Credit list page</title>
+<title>Difference list page</title>
 {% load static %}
 <link rel="stylesheet" href="{% static 'mystyle.css' %}">
 
 </head>
 <body>
-<h1>welcome</h1>
+<h1>{{ cate1 }}</h1>
 <table>
 <tr>
 <th>Name</th>
-<th>Balance amount</th>
+<th>Difference amount</th>
 </tr>
 {% for x, y in balance_list.items %}
 {% if y != 0 %} 
