--- a/myDailyAccountEntry/account_entry/templates/home.html
+++ b/myDailyAccountEntry/account_entry/templates/home.html
@@ -44,13 +44,13 @@
 </tr>
 </table>
 <h2>Difference check</h2>
-<p><a href="difference_check/Aadhaar ATM transaction in/Aadhaar ATM money out">Aadhaar ATM transaction in   Aadhaar ATM money out</a></p>
-<p><a href="difference_check/By mobile recharge/Mobile recharge">By mobile recharge   Mobile recharge</a></p>
-<p><a href="difference_check/Money in for transaction out/Transaction out by money in">Money in for transaction out   Transaction out by money in</a></p>
-<p><a href="difference_check/Transaction in for money out/Money out by transaction in">Transaction in for money out   Money out by transaction in</a></p>
-<p><a href="difference_check/Transaction in for transaction out/Transaction out by transaction in">Transaction in for transaction out   Transaction out by transaction in</a></p>
-<p><a href="difference_check/Transaction out for transaction in/Transaction in by transaction out">Transaction out for transaction in   Transaction in by transaction out</a></p>
-<p><a href="difference_check/Wallet Deposit for recharge/Wallet money added">Wallet Deposit for recharge   Wallet money added</a></p>
+<p><a href="difference_check/Aadhaar ATM transaction in/Aadhaar ATM money out" target="_blank">Aadhaar ATM transaction in / Aadhaar ATM money out</a></p>
+<p><a href="difference_check/By mobile recharge/Mobile recharge" target="_blank">By mobile recharge / Mobile recharge</a></p>
+<p><a href="difference_check/Money in for transaction out/Transaction out by money in" target="_blank">Money in for transaction out / Transaction out by money in</a></p>
+<p><a href="difference_check/Transaction in for money out/Money out by transaction in" target="_blank">Transaction in for money out / Money out by transaction in</a></p>
+<p><a href="difference_check/Transaction in for transaction out/Transaction out by transaction in" target="_blank">Transaction in for transaction out / Transaction out by transaction in</a></p>
+<p><a href="difference_check/Transaction out for transaction in/Transaction in by transaction out" target="_blank">Transaction out for transaction in / Transaction in by transaction out</a></p>
+<p><a href="difference_check/Wallet Deposit for recharge/Wallet money added" target="_blank">Wallet Deposit for recharge / Wallet money added</a></p>
 
 </body>
 </html>
